# bridgeAPI

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  ESTADO_REFATORACAO_APIS.md  GUIA_DEPLOY_VPS.md  MANUAL_PADRONIZACAO_APIS.md  Makefile  PLANEJAMENTO_BRIDGE_API.md  REQUISITOS_REFATORACAO_APIS.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  plano_desenvolvimento_tdd_xp.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 76f693953ed4_create_clients_table.py  806d0ec16460_create_users_table.py  a3f1c8e92b45_create_external_apis_and_endpoints_tables.py  b1c2d3e4f5a6_add_url_template_to_external_apis.py  c2d3e4f5a6b7_add_slug_to_external_apis.py  c4d5e6f7a8b9_create_request_metrics_table.py  d3e4f5a6b7c8_add_api_id_to_api_keys.py  d5e6f7a8b9c0_add_rate_limit_to_api_keys.py  e1f2a3b4c5d6_add_key_secret_encrypted_to_api_keys.py  e4f5a6b7c8d9_add_cost_per_query_to_external_apis.py  eb4ad1d0d2e9_create_api_keys_table.py  f3c2d1b4e5a6_create_permissions_table.py  f5a6b7c8d9e0_add_delete_cascade_to_external_apis_fks.py  f6a7b8c9d0e1_accounts_refactor.py  g7b8c9d0e1f2_account_roles_and_member_role_id.py  h8c9d0e1f2a3_account_logo_branding.py  i9d0e1f2a3b4_users_email_multi_account.py  j0e1f2a3b4c5_account_brand_color.py  k1f2a3b4c5d6_account_brand_palette.py  l2a3b4c5d6e7_account_brand_theme_json.py  m3b4c5d6e7f8_add_service_token_to_external_apis.py  n4c5d6e7f8a9_create_proxies_and_pools.py  o5d6e7f8a9b0_proxy_account_scoping.py  p6e7f8a9b0c1_proxies_per_api.py  q7f8a9b0c1d2_captcha_per_api.py  r8a9b0c1d2e3_api_post_method_body.py  s9b0c1d2e3f4_proxy_jobs.py  t0c1d2e3f4a5_job_webhook.py  u1d2e3f4a5b6_alerts.py  (+3 more)
backend/app/: main.py
backend/scripts/: create_admin.py  test_db.py
backend/tests/: conftest.py
bridge-sdk/: README.md  pyproject.toml
bridge-sdk/bridge_sdk/: __init__.py  captcha.py  config.py  context.py  errors.py  events.py  health.py  logging.py  proxy.py  runtime.py  status_reporter.py  transport.py
bridge-sdk/tests/: test_captcha.py  test_context.py  test_errors.py  test_fastapi_integration.py  test_flask_integration.py  test_health.py  test_logging.py  test_proxy.py  test_runtime.py  test_status_reporter.py
(+244 files in other folders)
