[project]
name = "bridge-api"
version = "0.1.0"
description = "Bridge API — centralized API gateway"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.2.0",
    "httpx>=0.27.0",
    "motor>=3.4.0",
    "redis[asyncio]>=5.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "ruff>=0.4.0",
    "black>=24.4.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests that require live Docker services (postgres, mongo, redis)",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP017", "UP045"]  # datetime.UTC e X|None requerem Python 3.11+/3.10+

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.coverage.run]
omit = ["tests/*", "alembic/*", "app/core/config.py"]
